Link style sheet and JS script to HTLM

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Check Yo Self</title>
   </head>
   <body>
@@ -19,7 +21,7 @@
           <div class="task-item-input">
             <p>Task Item<p>
               <input type="text" name="task-item">
-          </div>      
+          </div>
           <button type="button" name="make-task-list">Make Task List</button>
           <button type="button" name="clear-all">Clear All</button>
         </section>
