Add 'plus' button on the task input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           </div>
           <div class="task-item-input">
             <p>Task Item<p>
-              <input class="task-input" type="text" name="task-item">
+              <div class= "add-task-btn-input">
+                <input class="task-input" type="text" name="task-item">
+                <button class="add-task-btn" type="submit" alt="Submit" name="button">+</button>
+              </div>
           </div>
           <button type="button" name="make-task-list">Make Task List</button>
           <button class="clear-btn" type="button" name="clear-all">Clear All</button>
