Add container and  placeholder for task cards

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         </section>
       </section> <!-- closing of left side section  -->
       <section class="right-side">
+        <div class="task-card-container">
+          <div class="task-card">
+          </div>
+          <div class="task-card">
+          </div>
+          <div class="task-card">
+          </div>
+          <div class="task-card">
+          </div>
+        </div>
       </section> <!-- closing of right side section  -->
     </main>
   </body>
