Add scripts to HTML and change <p> to <h1> for title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <h1>CHECK <span>YO'</span> SELF</h1>
+      <h1>CHECK <span class="yo">YO'</span> SELF</h1>
       <div class="search-btn-input">
       <input class="search-btn" type="image" src="assets/search.svg" alt="Search" name="button"></input>
       <input type="text" value="Search">
@@ -38,6 +38,23 @@
       <section class="right-side">
         <div class="task-card-container">
           <div class="task-card">
+            <h2> Task Title</h2>
+            <div class="saved-tasks-container">
+              <div class="saved-tasks">
+                <div class= "saved-task-img">
+                  <img class="checkbox-img" src="assets/checkbox.svg" alt="checkbox"></img>
+                  <span class="single-task">Don't ever play yourself.</span>
+                </div>
+                <div class= "saved-task-img">
+                  <img class="checkbox-img" src="assets/checkbox.svg" alt="checkbox"></img>
+                  <span class="single-task">Don't ever play yourself.</span>
+                </div>
+                <div class= "saved-task-img">
+                  <img class="checkbox-img" src="assets/checkbox.svg" alt="checkbox"></img>
+                  <span class="single-task">Don't ever play yourself.</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="task-card">
           </div>
@@ -48,5 +65,8 @@
         </div>
       </section> <!-- closing of right side section  -->
     </main>
+    <script src="main.js"></script>
+  <script src="task.js"></script>
+  <script src="todo-list.js"></script>
   </body>
 </html>
