add section for unsaved tasks

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <p>Task Title<p>
               <input class="title-input" type="text" name="task-title">
         </div>
+        <section class="unsaved-tasks">
+        </section>
         <div class="task-item-input">
           <p>Task Item<p>
               <div class="add-task-btn-input">
