Fix spelling error

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <section class="task-and-buttons">
         <div class="task-title-input">
           <p>Task Title<p>
-              <input class="title-input title-input-js" type="text" name="task-title">
+              <input class="title-input title-input-js" type="text" name="task-title" value="Input Title">
         </div>
         <section class="unsaved-tasks">
         </section>
         <div class="task-item-input">
           <p>Task Item<p>
               <div class="add-task-btn-input">
-                <input class="task-input task-input-js" type="text" name="task-item">
+                <input class="task-input task-input-js" type="text" name="task-item" value="Input Task Name">
                 <button class="add-task-btn add-task-btn-js" type="submit" alt="Submit" name="button">+</button>
               </div>
         </div>
@@ -60,11 +60,11 @@
             </div>
           </div>
           <div class="urgency-delete-container">
-            <div>
+            <div class="urgent-img-tag">
               <img src="assets/urgent.svg" alt="urgency level">
               <p>urgent</p>
             </div>
-            <div>
+            <div class="delete-img-tag">
               <img src="assets/delete.svg" alt="delete card button">
               <p>delete</p>
             </div>
