Correct class name on image on task item

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
           <div class="saved-tasks-container">
             <div class="saved-tasks">
               <div class="saved-task-img">
-                <img class="checkbox-img" src="assets/checkbox.svg" alt="checkbox"></img>
+                <img class="delete-img" src="assets/checkbox.svg" alt="checkbox"></img>
                 <span class="single-task">Don't ever play yourself.</span>
               </div>
               <div class="saved-task-img">
-                <img class="checkbox-img" src="assets/checkbox.svg" alt="checkbox"></img>
+                <img class="delete-img" src="assets/checkbox.svg" alt="checkbox"></img>
                 <span class="single-task">Don't ever play yourself.</span>
               </div>
               <div class="saved-task-img">
-                <img class="checkbox-img" src="assets/checkbox.svg" alt="checkbox"></img>
+                <img class="delete-img" src="assets/checkbox.svg" alt="checkbox"></img>
                 <span class="single-task">Don't ever play yourself.</span>
               </div>
             </div>
