add disabled attribute to add task button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>Task Item<p>
               <div class="add-task-btn-input">
                 <input class="task-input task-input-js" type="text" name="task-item" value="Input Task Name">
-                <button class="add-task-btn add-task-btn-js" type="submit" alt="Submit" name="button">+</button>
+                <button disabled class="add-task-btn add-task-btn-js" type="submit" alt="Submit" name="button">+</button>
               </div>
         </div>
         <button class="make-task-btn-js" type="button" name="make-task-list">Make Task List</button>
@@ -41,41 +41,6 @@
     </section> <!-- closing of left side section  -->
     <section class="right-side">
       <div class="task-card-container">
-        <div class="task-card">
-          <h2> Task Title</h2>
-          <div class="saved-tasks-container">
-            <div class="saved-tasks">
-              <div class="saved-task-img">
-                <img class="delete-img" src="assets/checkbox.svg" alt="checkbox"></img>
-                <span class="single-task">Don't ever play yourself.</span>
-              </div>
-              <div class="saved-task-img">
-                <img class="delete-img" src="assets/checkbox.svg" alt="checkbox"></img>
-                <span class="single-task">Don't ever play yourself.</span>
-              </div>
-              <div class="saved-task-img">
-                <img class="delete-img" src="assets/checkbox.svg" alt="checkbox"></img>
-                <span class="single-task">Don't ever play yourself.</span>
-              </div>
-            </div>
-          </div>
-          <div class="urgency-delete-container">
-            <div class="urgent-img-tag">
-              <img src="assets/urgent.svg" alt="urgency level">
-              <p>urgent</p>
-            </div>
-            <div class="delete-img-tag">
-              <img src="assets/delete.svg" alt="delete card button">
-              <p>delete</p>
-            </div>
-          </div>
-        </div>
-        <div class="task-card">
-        </div>
-        <div class="task-card">
-        </div>
-        <div class="task-card">
-        </div>
       </div>
     </section> <!-- closing of right side section  -->
   </main>
