--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>CHECK <span class="yo">YO'</span> SELF</h1>
     <div class="search-btn-input">
       <input class="search-btn" type="image" src="assets/search.svg" alt="Search" name="button"></input>
-      <input type="text" value="Search">
+      <input type="text" placeholder="Search">
     </div>
   </nav>
   <main>
@@ -21,18 +21,18 @@
       <section class="task-and-buttons">
         <div class="task-title-input">
           <p>Task Title<p>
-              <input class="title-input title-input-js" type="text" name="task-title" value="Input Title">
+              <input class="title-input title-input-js" type="text" name="task-title" placeholder="Input Title">
         </div>
         <section class="unsaved-tasks">
         </section>
         <div class="task-item-input">
           <p>Task Item<p>
               <div class="add-task-btn-input">
-                <input class="task-input task-input-js" type="text" name="task-item" value="Input Task Name">
+                <input class="task-input task-input-js" type="text" name="task-item" placeholder="Input Task Name">
                 <button disabled class="add-task-btn add-task-btn-js" type="submit" alt="Submit" name="button">+</button>
               </div>
         </div>
-        <button class="make-task-btn-js" type="button" name="make-task-list">Make Task List</button>
+        <button disabled class="make-task-btn-js" type="button" name="make-task-list">Make Task List</button>
         <button class="clear-btn clear-btn-js " type="button" name="clear-all">Clear All</button>
       </section>
       <section class="filter-btn-section">
