Add no new task section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       </section>
     </section> <!-- closing of left side section  -->
     <section class="right-side">
+      <section class= "no-new-task-yet-js no-new-task-yet">
+        <p>No New Task yet.<br> New task will apear here</p>
+      </section>
       <div class="task-card-container">
       </div>
     </section> <!-- closing of right side section  -->
