--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <button disabled class="add-task-btn add-task-btn-js" type="submit" alt="Submit" name="button">+</button>
               </div>
         </div>
-        <button disabled class="make-task-btn-js" type="button" name="make-task-list">Make Task List</button>
-        <button class="clear-btn clear-btn-js " type="button" name="clear-all">Clear All</button>
+        <button disabled class="make-task-btn-js button-inactive" type="button" name="make-task-list">Make Task List</button>
+        <button class="clear-btn clear-btn-js button-inactive" type="button" name="clear-all">Clear All</button>
       </section>
-      <section class="filter-btn-section">
-        <button class="filter-btn-js" type="button" name="filter">Filter by Urgency</button>
+      <section class="filter-btn-section button-inactive">
+        <button class="filter-btn-js button-inactive" type="button" name="filter">Filter by Urgency</button>
       </section>
     </section> <!-- closing of left side section  -->
     <section class="right-side">
