Add disabled attribute to clear button by default

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
         </div>
         <button disabled class="make-task-btn-js button-inactive" type="button" name="make-task-list">Make Task List</button>
-        <button class="clear-btn clear-btn-js button-inactive" type="button" name="clear-all">Clear All</button>
+        <button disabled class="clear-btn clear-btn-js button-inactive" type="button" name="clear-all">Clear All</button>
       </section>
       <section class="filter-btn-section button-inactive">
         <button class="filter-btn-js button-inactive" type="button" name="filter">Filter by Urgency</button>
