Change asset folder to properly show on github pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <h1>CHECK <span class="yo">YO'</span> SELF</h1>
     <div class="search-btn-input">
-      <input class="search-btn" type="image" src="assets/search.svg" alt="Search" name="button"></input>
+      <input class="search-btn" type="image" src="Assets/search.svg" alt="Search" name="button"></input>
       <input type="text" placeholder="Search">
     </div>
   </nav>
